--- a/dinningPhilosopher.html
+++ b/dinningPhilosopher.html
@@ -41,9 +41,9 @@
 			<button type="button" id="reset" class="float-left col-sm-4 mx-auto btn btn-success">Reset</button>
 		</div>
 		<div class="mt-3 row">
-			<div id="canvas" class="col-sm-8 canvas">
+			<div id="canvas" class="col-8 canvas">
 			</div>
-			<div id="log" class="col-sm-4 border border-light"></div>
+			<div id="log" class="col-4 border border-light"></div>
 		</div>
 	</section>
 
